# blocks-production-lib

./: CHANGELOG.md  Cargo.toml  DATA_MAP.md  LICENSE  README.md
benches/: performance.rs
examples/: README.md  advanced_config.rs  basic_usage.rs  data_provider.rs  error_handling.rs  plotting_data.rs  statistics_analysis.rs
src/: client.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  types.rs
tests/: integration_tests.rs
