
[package]
name = "blocks-production-lib"
version = "0.1.0"
edition = "2021"
authors = ["matsuro-hadouken"]
description = "Rust library for Solana block production statistics and validator skip rate analysis"
license = "MIT"
repository = "https://github.com/matsuro-hadouken/blocks-production-lib"
keywords = ["solana", "blockchain", "validator", "skiprate", "statistics"]
categories = ["cryptocurrency", "api-bindings"]
rust-version = "1.75"
exclude = ["/target", "/.git", "/.github", "/tmp"]

[features]
default = []
# Enable development features for testing and debugging
dev = ["tokio/test-util"]

[lib]
name = "blocks_production_lib"

[[bin]]
name = "blocks-production-demo"
path = "src/main.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced_config"
path = "examples/advanced_config.rs"

[[example]]
name = "statistics_analysis"
path = "examples/statistics_analysis.rs"

[dependencies]
# HTTP client for RPC requests
reqwest = { version = "0.12", features = ["json"] }
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
# Async utilities
futures = "0.3"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
thiserror = "2.0"
anyhow = "1.0"
# Rate limiting
governor = "0.10"
nonzero_ext = "0.3"
# Retry logic
tokio-retry = "0.3"
# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-futures = "0.2"
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# Lazy static initialization
once_cell = "1.0"

[dev-dependencies]
env_logger = "0.11"
tokio-test = "0.4"
# For mock HTTP responses in tests
wiremock = "0.6"
# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
futures = "0.3"

[[bench]]
name = "performance"
harness = false
