
[package]
name = "blocks-production-lib"
version = "0.1.0"
edition = "2021"
authors = ["matsuro-hadouken"]
description = "Rust library for Solana block production statistics and validator skip rate analysis"
license = "MIT"
repository = "https://github.com/matsuro-hadouken/blocks-production-lib"
keywords = ["solana", "blockchain", "validator", "skiprate", "statistics"]
categories = ["cryptocurrency", "api-bindings"]
rust-version = "1.75"
exclude = ["/target", "/.git", "/.github", "/tmp"]

[features]
default = []
dev = ["tokio/test-util"]

[lib]
name = "blocks_production_lib"

[[bin]]
name = "blocks-production-demo"
path = "src/main.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced_config"
path = "examples/advanced_config.rs"

[[example]]
name = "statistics_analysis"
path = "examples/statistics_analysis.rs"

[[example]]
name = "data_provider"
path = "examples/data_provider.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
governor = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
wiremock = "0.6"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
futures = "0.3"

[[bench]]
name = "performance"
harness = false
